--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,6 +6,9 @@
  .title{
   font-size: 40px !important;
  }
+ .projectCont{
+ display:block !important;
+}
  .cont{ 
   height: 90vh;
   box-shadow: 0 4px 24px rgba(34, 41, 47, 0.1);
@@ -13,17 +16,6 @@
   background-repeat: no-repeat;
   background-size:contain;
   background-image: url(../img/BlogBox.PNG);
-}
-.projectheader{
-  margin-bottom: 5%;
-  margin-right:10% ;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 300px;
-  height: 250px;
-  border-radius: 50%;
-  border: 3px solid rgb(150, 3, 3);
 }
 .card{
   width: 20rem !important;
@@ -46,8 +38,37 @@
 .contact-us{
   width: 90%;
 }
+.fa-magnifying-glass{
+  color: rgb(60, 60, 60);
+  display: block !important;
+ }
+ .searchForm input{
+ display: none;
+}
+.col{
+  flex:100% !important;
+}
+  }
+  @media screen and (max-width: 585px) and (min-width: 400px) {
+    .fa-magnifying-glass{
+      color: rgb(60, 60, 60);
+      display: block !important;
+     }
+     .searchForm input{
+     display: none;
+    }
   }
   @media screen and (max-width: 1400px) and (min-width: 400px) {
+    .projectCont{
+      display:block !important;
+     }
+     /* .fa-magnifying-glass{
+      display: block;
+     } */
+     .col{
+  
+      flex:100% !important;
+    }
     .personal{
       font-size: 100px !important;
       margin-top: 40%;
@@ -62,17 +83,6 @@
       background-repeat: no-repeat;
       background-size:contain;
       background-image: url(../img/BlogBox.PNG);
-    }
-    .projectheader{
-      margin-bottom: 5%;
-      margin-right:28% !important ;
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      width: 300px;
-      height: 250px;
-      border-radius: 50%;
-      border: 3px solid rgb(150, 3, 3);
     }
     .card{
       width: 20rem !important;
