--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,17 +5,55 @@
     border-radius: 50%;
     border: 1px solid rgb(150, 3, 3);
 }
+ul .li{
+    list-style: none;
+    padding-inline: 8px;
+    color: #fff;
+}
+.navbar0{
+    padding: 10px;
+    background-color:rgb(150, 3, 3);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1;
+}
+.leftSide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.searchForm{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.searchForm input{
+    padding-block: 10px;
+    padding-inline: 20px;
+    border-radius: 10px;
+    border: none;
+}
+.button{
+    border-radius: 10px ;
+    color: #fff;
+    background-color: #464545;
+    padding-block: 12px;
+    padding-inline: 10px;
+    margin-left: 2%;
+    border: none;
 
-.bg-light {   
-    background-color:rgb(150, 3, 3)  !important;
 }
-.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
-    color: #fff;
+.navlist{
+    display:flex;
+  
 }
-.nav-link{
-    color: #fff;
-    
+.container{
+    max-width: 1140px;
+    margin: auto;
 }
+
+
 .btn:hover {
     background-color:rgb(150, 3, 3);
     border-color:rgb(150, 3, 3);
@@ -27,24 +65,37 @@ border-radius: 50%;
 border: 3px solid rgb(150, 3, 3);
 }
 .personal{
-    font-size: 200px;
+    font-size: 180px;
     font-family: Caveat; 
     color: #7f0606;
 }
+.col {
+  
+    padding: 15px;
+    box-sizing: border-box;
+  }
+.cvSection{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+.cvHeader{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 .cont{ 
-    height: 90vh;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
     box-shadow: 0 4px 24px rgba(34, 41, 47, 0.1);
     background-position: bottom;
     background-repeat: no-repeat;
     background-image: url(../img/BlogBox.PNG);
 
 }
-.title{
-    /* margin-bottom: 10%; */
-    font-family: Caveat;    
-    font-size: 60px;
-    font-weight: bolder;
-}
+
 .subCont{
   box-shadow: 0 4px 24px rgba(34, 41, 47, 0.1);
   padding-top: 10%;
@@ -60,12 +111,16 @@ border: 3px solid rgb(150, 3, 3);
 i{
     color: #7f0606;
 }
+.fa-magnifying-glass{
+    display: none;
+}
 a{
     color: #000;
     text-decoration: none;
 }
 .subconcatinfo{
    margin-bottom: 0;
+   margin-top: 0;
 }
 .subConta{
     width:83%;
@@ -77,10 +132,28 @@ a{
     margin-bottom: 0;
 }
 footer{
-    background-color: #9c0f0f;
+    background-color: rgb(150, 3, 3);
     box-shadow: 0 4px 24px rgba(34, 41, 47, 0.1);
+}
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    color: #fff;
 }
 .nav-link.active{
     color: #464545 !important;
     text-shadow:2px 4px 24px rgba(116, 117, 117, 0.5) !important;
+}
+.navlist a{
+    color: #fff;
+}
+.col{
+    flex: 41.6667%;
+}
+.input{
+    margin-top: 8%;
+  padding: 10px;
+    width: 85%;
 }
